Fixed Search string is not visible on the search result page

--- a/css/sidebar.less
+++ b/css/sidebar.less
@@ -68,6 +68,12 @@
 }
 
 /* Forms */
+form.search.doku_form {
+    input[type="search"] {
+        color: @ini_background;
+    }
+}
+
 .widget-area,
 .search-form {
     button,
@@ -97,7 +103,7 @@
     input[type="password"],
     input[type="search"],
     textarea {
-        color: @ini_background;
+        color: @ini_text_alt;
         border-color: @ini_theme_color_alt;
     }
     input[type="text"]:focus,
